--- a/src/components/Courses/index.css
+++ b/src/components/Courses/index.css
@@ -1,19 +1,3 @@
-.each-course-container {
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-  margin-right: 50px;
-}
-.logo {
-  height: 60px;
-  width: 60px;
-  margin-right: 15px;
-}
-.name {
-  font-size: 30px;
-  font-family: 'Roboto';
-  font-weight: 600;
-}
-.link {
-  color: #000000;
+.card-container {
+  background-color: #ffffff;
 }
